<resources>
    <string name="app_name">Stand Up</string>

    <string name="unit_hour">시간</string>
    <string name="unit_minute">분</string>
    <string name="unit_second">초</string>

    <string name="general_now">지금</string>
    <string name="general_all_day">하루 종일</string>
    <string name="general_daily_average">일일 평균</string>
    <string name="general_daily_total">일일 총합</string>
    <string name="general_none_collection">측정치 없음</string>
    <string name="general_weekly_average">최근 일주일 평균</string>
    <string name="general_accepted">허용됨</string>
    <string name="general_rejected">거부됨</string>
    <string name="general_unknown">알 수 없음</string>

    <string name="menu_bottom_dashboard">대시보드</string>
    <string name="menu_bottom_timeline">타임라인</string>
    <string name="menu_bottom_config">설정</string>

    <string name="btn_permission_request">권한 설정</string>

    <string name="msg_error_permission_denied">정상적인 서비스 제공을 위해 권한을 허용하셔야 합니다. 앱을 다시 실행해주세요.</string>
    <string name="msg_error_google_sign_in">구글 로그인에 실패하였습니다.</string>
    <string name="msg_error_firebase_auth">구글 계정과 연동에 실패하였습니다.</string>
    <string name="msg_error_failed_to_load_data">데이터를 불러올 수 없습니다.</string>
    <string name="msg_error_empty_data">데이터가 없습니다.</string>

    <string name="msg_normal_snooze_reset">방해 금지 기간이 초기화되었습니다.</string>

    <string name="msg_normal_permission_grated">권한이 정상적으로 허용되었습니다. 서비스를 시작합니다.</string>
    <string name="msg_normal_back_pressed_twice">종료하시려면 뒤로 가기를 한번 더 눌러주세요.</string>
    <string name="msg_normal_request_app_usage_collect">StandUp 이 사용 정보에 접근할 수 있도록 허용해주세요.</string>

    <string name="item_title_sedentary">앉아 있었습니다.</string>
    <string name="item_title_stand_up">움직였습니다.</string>
    <string name="item_title_average_sedentary_time">평균 앉은 시간</string>
    <string name="item_title_total_sedentary_time">총 앉은 시간</string>

    <string name="item_title_weekly_sedentary_stat">최근 일주일 간 앉은 시간</string>
    <string name="item_title_weekly_active_stat">최근 일주일 간 움직인 시간</string>

    <string name="noti_action_snooze">방해 금지</string>
    <string name="noti_action_already_stand_up">이미 움직임</string>
    <string name="noti_action_dismiss">닫기</string>

    <string name="noti_sedentariness_title">오래 앉아 계셨습니다.</string>
    <string name="noti_sedentariness_text">동안 앉아 계셨네요. 스마트폰을 들고 일어나서 움직여보세요.</string>

    <string name="noti_stand_up_title">일어나셨네요!</string>
    <string name="noti_stand_up_text">만에 일어나셨습니다.</string>

    <string name="noti_service_running_title">서비스 실행 중</string>
    <string name="noti_service_running_text">앉아 있는 시간을 수집중입니다.</string>

    <string name="noti_intervention_channel_name">Stand up</string>
    <string name="noti_intervention_channel_desc">장기간 앉아 있음 및 기상 알림 전달</string>

    <string name="noti_silent_channel_name">서비스 동작</string>
    <string name="noti_silent_channel_desc">서비스 동작 여부 알림 전달</string>

    <string name="dialog_reset_snooze_until_title">방해 금지 기간 초기화</string>
    <string name="dialog_reset_snooze_until_message">방해 금지 기간을 초기화하시겠습니까?</string>

    <string name="pref_category_collection">pref_category_collection</string>
    <string name="pref_category_collection_title">신체 활동 추적</string>

    <string name="pref_category_intervention">pref_category_intervention</string>
    <string name="pref_category_intervention_title">알림 전달 설정</string>

    <string name="pref_category_status">pref_category_status</string>
    <string name="pref_category_status_title">상태</string>

    <string name="pref_category_etc">pref_category_etc</string>
    <string name="pref_category_debug_etc">기타</string>

    <string name="pref_category_debug">pref_category_debug</string>
    <string name="pref_category_debug_title">디버그</string>

    <!-- Preference keys and corresponding title/summary visible to users-->
    <string name="pref_intervention_init_interval">pref_intervention_init_interval</string>
    <string name="pref_intervention_init_interval_title">알림 전달 주기 (분)</string>
    <string name="pref_intervention_init_interval_summary">이 시간 만큼 계속 앉아 있으면 기상 알림을 전달합니다.</string>

    <string name="pref_intervention_retry_interval">pref_intervention_retry_interval</string>
    <string name="pref_intervention_retry_interval_title">알림 재 전달 주기 (분)</string>
    <string name="pref_intervention_retry_interval_summary">한번 알림이 전달된 후 이 시간만큼 지나면 기상 알림을 다시 전달합니다.</string>

    <string name="pref_intervention_snooze_duration">pref_intervention_snooze_duration</string>
    <string name="pref_intervention_snooze_duration_title">방해 금지 모드 길이 (분)</string>
    <string name="pref_intervention_snooze_duration_summary">알림이 전달 되었을 때 방해 금지 선택 시 현재 시간부터 이 시간만큼 기상 알림을 전달하지 않습니다.</string>

    <string name="pref_intervention_should_snooze">pref_intervention_should_snooze</string>
    <string name="pref_intervention_should_snooze_title">알림 중지</string>
    <string name="pref_intervention_should_snooze_summary">알림 전달을 중지합니다.</string>

    <string name="pref_intervention_daily_time_range">pref_intervention_daily_time_range</string>
    <string name="pref_intervention_daily_time_range_title">신체 활동 수집 시간</string>
    <string name="pref_intervention_daily_time_range_summary">하루에 신체 활동 내역을 수집할 시간을 설정합니다. 기상 알림 또한 이 시간을 기준으로 전달됩니다.</string>

    <string name="pref_intervention_days_of_week">pref_intervention_days_of_week</string>
    <string name="pref_intervention_days_of_week_title">알림 전달 요일</string>
    <string name="pref_intervention_days_of_week_summary">기상 알림을 전달할 요일을 설정합니다.</string>

    <!-- Preference keys disallow to set by user -->
    <string name="pref_status_intervention_snooze_until">pref_status_intervention_snooze_until</string>
    <string name="pref_status_intervention_snooze_until_title">방해 금지 모드 기간</string>
    <string name="pref_status_intervention_snooze_until_summary_off">없음</string>

    <string name="pref_status_collector">pref_status_collector</string>
    <string name="pref_status_collector_title">행동 수집기 상태</string>

    <string name="pref_status_sedentariness">pref_status_sedentariness</string>
    <string name="pref_status_sedentariness_title">인식된 행동</string>

    <string name="pref_status_account">pref_status_account</string>
    <string name="pref_status_account_title">계정</string>

    <!-- Preferences keys for ETC -->

    <string name="pref_etc_app_usage">pref_etc_app_usage</string>
    <string name="pref_etc_app_usage_title">앱 사용 내역 추적</string>

    <string name="pref_etc_sign_out">pref_etc_sign_out</string>
    <string name="pref_etc_sign_out_title">로그아웃</string>


    <!-- Preference keys for debug purpose -->
    <string name="pref_intervention_debug_action_stand_up">pref_intervention_debug_action_stand_up</string>
    <string name="pref_intervention_debug_action_stand_up_title">일어남 알림 전달</string>

    <string name="pref_intervention_debug_action_intervention">pref_intervention_debug_action_prolonged_setting</string>
    <string name="pref_intervention_debug_action_prolonged_setting_title">오래 앉음 알림 전달</string>


    <string-array name="weekdays">
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
