<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/widget_background"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@color/primary_dark"
            android:layout_columnWeight="1"
            android:text="@string/item_title_average_sedentary_time"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:gravity="center"
            android:id="@+id/txtWidgetSedentaryAvg"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_columnWeight="1"
            android:text="@string/general_none_collection"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_gravity="fill"
            android:id="@+id/lblWidgetTotalAvg"
            android:textColor="@color/secondary_dark"
            android:layout_columnWeight="1"
            android:text="@string/item_title_total_sedentary_time"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="fill"
            android:id="@+id/txtWidgetTotalAvg"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/secondary"
            android:layout_columnWeight="1"
            android:text="@string/general_none_collection"/>
    </LinearLayout>


    <ImageButton
        android:id="@+id/btnWidgetRefresh"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:tint="@android:color/darker_gray"
        android:src="@drawable/baseline_replay_black_24"/>
</LinearLayout>